<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="cc.yamyam.ui.PlacesFragment">

    <item android:id="@+id/action_whereami" android:title="@string/action_whereami"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="1" app:showAsAction="always" android:enabled="true" />


    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1" app:showAsAction="always" android:enabled="true" />

    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:icon="@drawable/ic_action_location_searching"
        android:orderInCategory="1" app:showAsAction="always" android:enabled="true" />
</menu>